--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dicta quis rem voluptatum sed modi velit magni voluptas tenetur deleniti error eum doloremque repellat natus, praesentium eligendi ut odit. Similique.</p>
 </body>
 </html>
